# news-intelligence-system

./: .env.example  .gitignore  FORK_ENDEE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat
config/: __init__.py  settings.py
scripts/: ingest.py  scheduled_ingest.py
src/: __init__.py
src/agents/: __init__.py  workflows.py
src/api/: __init__.py  main.py
src/embeddings/: __init__.py  encoder.py
src/news_ingestion/: __init__.py  fetcher.py  storage.py
src/rag/: __init__.py  pipeline.py
src/recommendations/: __init__.py  engine.py
src/vector_db/: __init__.py  endee_client.py
